Addition: added timestamp and unique error code to ErrorDTO and to Logging
