# Anime_App/src/main/java/anime/app/exceptions/ExceptionControllerAdvice.java
@@ -6,6 +6,7 @@ import anime.app.exceptions.exceptions.NotFoundException;
 import anime.app.exceptions.exceptions.ValidationException;
 import anime.app.openapi.model.ErrorDTO;
 import anime.app.services.i18n.I18nServiceInterface;
+import anime.app.utils.ErrorUtils;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
@@ -20,7 +21,9 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
+import java.time.LocalDateTime;
 import java.util.Objects;
+import java.util.UUID;
 
 /**
  * Class for handling custom and selected errors. Each custom error must have its own Exception Handler and Status.
@@ -44,11 +47,13 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(AnilistException.class)
 	@ResponseStatus(HttpStatus.SERVICE_UNAVAILABLE)
 	ErrorDTO anilistExceptionHandler(AnilistException ex) {
-		log.error(ex.getLogMessage());
+		log.error(ex.getCompleteLogMessage());
 
 		return ErrorDTO.builder()
 				.status(HttpStatus.SERVICE_UNAVAILABLE.value())
 				.message(i18nService.getTranslation(ex.getUserMessageTranslationKey(), ex.getOriginalLocale(), ex.getTranslationParameters()))
+				.timeStamp(ex.getErrorOccurrenceTime())
+				.code(ex.getGeneratedErrorCode())
 				.build();
 	}
 
@@ -60,11 +65,13 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(NotFoundException.class)
 	@ResponseStatus(HttpStatus.NOT_FOUND)
 	ErrorDTO notFoundExceptionHandler(NotFoundException ex) {
-		log.error(ex.getLogMessage());
+		log.error(ex.getCompleteLogMessage());
 
 		return ErrorDTO.builder()
 				.status(HttpStatus.NOT_FOUND.value())
 				.message(i18nService.getTranslation(ex.getUserMessageTranslationKey(), ex.getTranslationParameters()))
+				.timeStamp(ex.getErrorOccurrenceTime())
+				.code(ex.getGeneratedErrorCode())
 				.build();
 	}
 
@@ -76,11 +83,13 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(AuthenticationException.class)
 	@ResponseStatus(HttpStatus.UNAUTHORIZED)
 	ErrorDTO authorizationExceptionHandler(AuthenticationException ex) {
-		log.error(ex.getLogMessage());
+		log.error(ex.getCompleteLogMessage());
 
 		return ErrorDTO.builder()
 				.status(HttpStatus.UNAUTHORIZED.value())
 				.message(i18nService.getTranslation(ex.getUserMessageTranslationKey(), ex.getOriginalLocale(), ex.getTranslationParameters()))
+				.timeStamp(ex.getErrorOccurrenceTime())
+				.code(ex.getGeneratedErrorCode())
 				.build();
 	}
 
@@ -92,11 +101,13 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(ValidationException.class)
 	@ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
 	ErrorDTO validationExceptionHandler(ValidationException ex) {
-		log.error(ex.getLogMessage());
+		log.error(ex.getCompleteLogMessage());
 
 		return ErrorDTO.builder()
 				.status(HttpStatus.INTERNAL_SERVER_ERROR.value())
 				.message(i18nService.getTranslation(ex.getUserMessageTranslationKey(), ex.getTranslationParameters()))
+				.timeStamp(ex.getErrorOccurrenceTime())
+				.code(ex.getGeneratedErrorCode())
 				.build();
 	}
 
@@ -111,7 +122,9 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 	@Override
 	@NonNull
 	protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, @NonNull HttpHeaders headers, @NonNull HttpStatus status, @NonNull WebRequest request) {
-		String errorMessage = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+		LocalDateTime errorOccurrenceTime = LocalDateTime.now();
+		UUID errorCode = UUID.randomUUID();
+		String errorMessage = ErrorUtils.getErrorMessage(ex.getBindingResult().getAllErrors().get(0).getDefaultMessage(), errorOccurrenceTime, errorCode);
 
 		log.error(errorMessage);
 
@@ -120,6 +133,8 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 				ErrorDTO.builder()
 						.status(HttpStatus.UNPROCESSABLE_ENTITY.value())
 						.message(i18nService.getTranslation("general.an-error-occurred"))
+						.timeStamp(errorOccurrenceTime)
+						.code(errorCode)
 						.build(),
 				headers,
 				HttpStatus.UNPROCESSABLE_ENTITY,
@@ -138,14 +153,18 @@ public class ExceptionControllerAdvice extends ResponseEntityExceptionHandler {
 	@Override
 	@NonNull
 	protected ResponseEntity<Object> handleHttpMediaTypeNotSupported(@NonNull HttpMediaTypeNotSupportedException ex, @NonNull HttpHeaders headers, @NonNull HttpStatus status, @NonNull WebRequest request) {
-		String message = Objects.nonNull(ex.getMessage()) ? ex.getMessage() : "No message given";
-		log.error("This media type is not supported: {}", message);
+		LocalDateTime errorOccurrenceTime = LocalDateTime.now();
+		UUID errorCode = UUID.randomUUID();
+		String errorMessage = ErrorUtils.getErrorMessage(Objects.nonNull(ex.getMessage()) ? ex.getMessage() : "No message given", errorOccurrenceTime, errorCode);
+		log.error("This media type is not supported: {}", errorMessage);
 
 		return handleExceptionInternal(
 				ex,
 				ErrorDTO.builder()
 						.status(status.value())
 						.message(i18nService.getTranslation("general.an-error-occurred"))
+						.timeStamp(errorOccurrenceTime)
+						.code(errorCode)
 						.build(),
 				headers,
 				status,
